# kups-md-tutorials

./: .gitignore  AGENTS.md  PLAN.md  PROJECT.md  README.md  hello.py  pyproject.toml
.github/workflows/: production-gpu.yml  verify.yml
configs/post-01/: full.json  smoke.json
configs/post-02/: full.json  (+1 more)
notebooks/: post-01-initialization.ipynb  post-02-integrators.ipynb  post-03-errors.ipynb  post-04-thermostats.ipynb  post-05-barostats.ipynb  post-06-trajectory-length.ipynb  post-07-observables.ipynb  post-08-free-energies.ipynb  post-09-estimators.ipynb  post-10-umbrella-sampling.ipynb  post-11-enhanced-sampling.ipynb  post-12-mlip-capstone.ipynb
reviews/: figure-sources.json  notebook-execution.json  notebook-execution.md  page-snapshots.md  post-01.md  post-02.md  post-03.md  post-04.md  post-05.md  post-06.md  post-07.md  post-08.md  post-09.md  post-10.md  post-11.md  post-12.md  release-readiness.md  website-build.json
scripts/: generate_post01_figures.py  generate_post02_figures.py  generate_post03_figures.py  generate_post04_figures.py  generate_post05_figures.py  generate_post06_figures.py  generate_post07_figures.py  generate_post08_figures.py  generate_post09_figures.py  generate_post10_figures.py  generate_post11_figures.py  generate_post12_figures.py
tests/: test_analysis.py  test_artifact_audit.py  test_cli.py  test_config.py  test_figures.py  test_initialization.py  test_notebook_execution.py  test_notebooks.py  test_production_status.py  test_provenance.py  test_release_readiness.py  test_review_audit.py  test_site_export.py  test_systems.py
(+101 files in other folders)
